ui: fixed the border color to be visible when initally on the dashboard page

--- a/app/signin-card.css
+++ b/app/signin-card.css
@@ -53,7 +53,7 @@ body,
   .cl-socialButtonsBlockButton {
     background-color: #B69802;.cl-socialButtonsBlockButton {
       
-      background-color: #FFA737;
+      background-color: #f0a544;
       color: #ffffff;
       padding: 10px 20px;
       border: none;
